# snake-slint

./: Cargo.toml  README.md
snake_bin_std/: Cargo.toml
snake_bin_std/src/: main.rs
snake_bin_uefi/: Cargo.toml  run.sh
snake_bin_uefi/src/: main.rs
snake_lib/: Cargo.toml  build.rs
snake_lib/src/: consts.rs  game.rs  grid.rs  lib.rs
snake_lib/ui/: app-window.slint
src/: consts.rs  game.rs  grid.rs  main.rs
ui/: app-window.slint
