[package]
name = "snake_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
slint = { version = "1.8.0", default-features = false }
log = "0.4"
rand = { version = "0.9.1", default-features = false, features = ["small_rng"]}
cfg-if = "1.0"

[build-dependencies]
slint-build = { version = "1.8.0", features = ["sdf-fonts"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
# This not
# RUSTFLAGS="-Zlocation-detail=none" cargo +nightly build --release
# because
# rust-lld: error: undefined symbol: __stack_top
# And
# cargo +nightly build --release
# Increases size by a few bytes

# Those don't change anything
debug = 0
debug-assertions = false
incremental = false
overflow-checks = false
